--- a/index.html
+++ b/index.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Profile card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="main">
+    <div class="card">
+      <div class="card__heading"></div>
+      <img class="card__picture" src="./images/image-victor.jpg" alt="image-victor">
+      <div class="card__title">
+        <h1>Victor Crest <span> 26 London </span> </h1>
+      </div>
+      <div class="card__footer">
+          <div class="card__tag">80K <br> Followers</div>
+          <div class="card__tag">803K <br> Likes</div>
+          <div class="card__tag">1.4K <br> Photos</div>
+      </div>
   </div>
+</div>
 </body>
 </html>
