--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
       <div class="card__heading"></div>
       <img class="card__picture" src="./images/image-victor.jpg" alt="image-victor">
       <div class="card__title">
-        <h1>Victor Crest <span> 26 London </span> </h1>
+        <h1 class="card__title--name">Victor Crest <span class="card__title--emphasis"> 26 </span></h1>
+        <h2 class="card__title--emphasis">London</h2>
       </div>
       <div class="card__footer">
-          <div class="card__tag">80K <br> Followers</div>
-          <div class="card__tag">803K <br> Likes</div>
-          <div class="card__tag">1.4K <br> Photos</div>
+          <div class="card__tag"><span class="card__tag--number">80k</span> <br> <span class="card__tag--items">Followers</span></div>
+          <div class="card__tag"><span class="card__tag--number"> 803K </span> <br> <span class="card__tag--items">Likes</span> </div>
+          <div class="card__tag"><span class="card__tag--number">1.4K</span>  <br> <span class="card__tag--items">Photos</span> </div>
       </div>
   </div>
 </div>
